@@ -1,8 +1,9 @@
 
 5.1.0 -> 5.2a0:
+    - jbj: fire triggers on file paths.
     - jbj: use rpmio Readlink everywhere consistently.
     - rpm.org: fix error messages in processScriptFiles().
-    - jbj: fire triggers on directory paths.
+    - jbj: fire triggers on parent directory paths.
     - jbj: use rpmds iterator and getters for trigger->N parse side effects.
     - jbj: hdrfmt: triggerconds header extension display was incorrect.
     - jbj: expose rpmdsType() in rpmds ABI.
